app/views/history/styles/entry.styl
@import 'nib'

.entry
  padding:30px 30px 30px 30px;
  border: 1px solid #dfe4e6
  margin-bottom:28px;
  display:block;
  position:relative;
  min-width:320px
  overflow:hidden

  .title
    font-size: 1.04rem;
    font-family:'ProximaNova SemiBold', sans-serif
    margin-bottom:30px

    a
      color: #373942

  .notes
    margin-bottom:30px
    font-family:'ProximaNova Light', sans-serif
    font-size:14px

    .first-line-toggler
      height:28px;
      overflow-y:hidden

  .tags
    font-size:16px
    margin-bottom:38px

    .tag
      display:inline-block
      color:#67737a;
      margin-top:5px
      margin-right:15px

  .delete
    position:absolute
    color:#a7afb6
    opacity:0
    top:30px
    right:30px
    transition:color 0.25s 0

    &:hover
      color:#555
      transition:color 0 0
      opacity:0
      transition:opacity 0 0


  footer
    height:40px
    position:absolute
    left:0
    right:0
    bottom:0
    width:100%
    border-top:solid #dfe4e6 1px
    padding:0 0 0 30px
    background-color:#edf1f2
    line-height:40px
    font-size:14px
    color:#a5b1b8
    font-family:'ProximaNova Light', sans-serif

    i
      margin-right:6px

    u
      width:100%

    .uri
      max-width:300px
      overflow:hidden
      text-overflow:ellipsis
      white-space:nowrap
      float:left

      &:hover a
        color:#67737a

    .dt-created, .entry-actions
      float:right

    .entry-actions
      margin-left:30px
      width:75px
      text-align:center
      font-size:16px
      font-family:'FontAwesome', sans-serif
      border-left:solid #dfe4e6 1px

      a
        display:block
        width:100%
        height:100%

  .actions
    text-align:right

    .cancel
      color:#858585
      font-size:0.85rem
      position:relative
      top:2px
      margin-right:5px
      text-transform:lowercase

  //.entry:hover
  &:hover, &.active
    border-color:#c5ced4;

    // h3.title a
    //   color:#ec7963

    .delete
      display:block
      opacity:0.5

  &:hover .entry-actions
    display:block

  .edit-entry-form
    input[type="text"], textarea
      margin-top:-2px

    .buttonHolder
      position:relative
      // position:-webkit-sticky
      // position:-moz-sticky
      // position:sticky
      // bottom:0
      // z-index:1

    .ctrlHolder
      position:relative
      margin-bottom: 13px;
      border-bottom: 1px solid #dfe4e6;

      &:last-child
        margin-top:15px;
        margin-bottom: 0;

      &::before
        top:2px

      &.title::before
        content:"\f02e"

      &.url::before
        content:"\f0ac"

      &.tags::before
        content:"\f02b"

      &.notes::before
        content:"\f075"

      input[type="text"], textarea
        padding-bottom:15px
        width: 100%;
        font-weight: 500;
        border:0;
        border:none;
        min-height:30px
        /*border-radius: 3px;
        -moz-border-radius: 3px;
        -webkit-border-radius: 3px;
        */

      textarea
        min-height:300px
        padding-top:5px
        padding-bottom:5px

      label
        margin-right: 30px;

  &:hover
    .entry-actions a
      color:#67737a

